--- a/index.html
+++ b/index.html
@@ -678,10 +678,10 @@ body.dark-mode .cert-icon {
                     <p>Developed responsive web applications using React and Node.js.</p>
                 </div>
             </div>
-            <!-- Add more timeline items as needed -->
+            
         </div>
     </section>
-</div> -->
+</div> 
 <style>
     .timeline {
         position: relative;
