--- a/index.html
+++ b/index.html
@@ -379,6 +379,93 @@ Designed and developed a Client Management System (CMS) using technologies such 
                 <!-- Add more project cards as needed -->
             </div>
         </section>
+        <div class="container">
+    <section id="timeline" class="section">
+        <h2>Education</h2>
+        <div class="timeline">
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <h3>Integrated M.Tech in Computer Science</h3>
+                    <span class="timeline-date">2021 – 2026</span>
+                    <p>Vellore Institute of Technology - AP<br>
+                    CGPA: 9.16/10</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <h3>12th Class</h3>
+                    <span class="timeline-date">2019 – 2021</span>
+                    <p>Percentage : 98.1%</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <h3>10th Class</h3>
+                    <span class="timeline-date">Jan 2023 – Mar 2023</span>
+                    <p>CGPA : 10.0/10.0</p>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+</div> 
+<style>
+    .timeline {
+        position: relative;
+        margin: 2em 0 0 1.5em;
+        padding-left: 1.5em;
+        border-left: 3px solid #00bcd4;
+    }
+    .timeline-item {
+        position: relative;
+        margin-bottom: 2.5em;
+    }
+    .timeline-dot {
+        position: absolute;
+        left: -1.6em;
+        top: 0.5em;
+        width: 1.2em;
+        height: 1.2em;
+        background: #00bcd4;
+        border-radius: 50%;
+        border: 3px solid #fff;
+        box-shadow: 0 2px 8px rgba(0,188,212,0.18);
+    }
+    .timeline-content {
+        background: #f4f4f4;
+        padding: 1em 1.5em;
+        border-radius: 12px;
+        box-shadow: 0 4px 16px rgba(0,188,212,0.08), 0 1px 4px rgba(0,0,0,0.04);
+        margin-left: 0.5em;
+        position: relative;
+    }
+    .timeline-content h3 {
+        margin: 0 0 0.2em 0;
+        color: #0097a7;
+        font-size: 1.1em;
+    }
+    .timeline-date {
+        font-size: 0.95em;
+        color: #00bcd4;
+        font-weight: 500;
+        margin-bottom: 0.5em;
+        display: block;
+    }
+    body.dark-mode .timeline-content {
+        background: #23272f;
+        color: #e0e7ef;
+    }
+    body.dark-mode .timeline {
+        border-left: 3px solid #80deea;
+    }
+    body.dark-mode .timeline-dot {
+        background: #80deea;
+        border-color: #23272f;
+    }
+</style>
         <section id="hobbies" class="section">
             <h2>Hobbies</h2>
             <div class="hobbies-list">
@@ -721,90 +808,3 @@ body.dark-mode .cert-icon {
 
 
 <!-- Timeline of Experience / Education -->
-<!-- <div class="container">
-    <section id="timeline" class="section">
-        <h2>Timeline</h2>
-        <div class="timeline">
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-content">
-                    <h3>B.Tech in Computer Science</h3>
-                    <span class="timeline-date">2020 – 2024</span>
-                    <p>XYZ Institute of Technology<br>
-                    CGPA: 8.7/10</p>
-                </div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-content">
-                    <h3>Intern – AI/ML Developer, ABC Solutions</h3>
-                    <span class="timeline-date">Jun 2023 – Aug 2023</span>
-                    <p>Worked on NLP-based recommendation systems and data analytics projects.</p>
-                </div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-content">
-                    <h3>Web Development Intern, DEF Tech</h3>
-                    <span class="timeline-date">Jan 2023 – Mar 2023</span>
-                    <p>Developed responsive web applications using React and Node.js.</p>
-                </div>
-            </div>
-            
-        </div>
-    </section>
-</div> 
-<style>
-    .timeline {
-        position: relative;
-        margin: 2em 0 0 1.5em;
-        padding-left: 1.5em;
-        border-left: 3px solid #00bcd4;
-    }
-    .timeline-item {
-        position: relative;
-        margin-bottom: 2.5em;
-    }
-    .timeline-dot {
-        position: absolute;
-        left: -1.6em;
-        top: 0.5em;
-        width: 1.2em;
-        height: 1.2em;
-        background: #00bcd4;
-        border-radius: 50%;
-        border: 3px solid #fff;
-        box-shadow: 0 2px 8px rgba(0,188,212,0.18);
-    }
-    .timeline-content {
-        background: #f4f4f4;
-        padding: 1em 1.5em;
-        border-radius: 12px;
-        box-shadow: 0 4px 16px rgba(0,188,212,0.08), 0 1px 4px rgba(0,0,0,0.04);
-        margin-left: 0.5em;
-        position: relative;
-    }
-    .timeline-content h3 {
-        margin: 0 0 0.2em 0;
-        color: #0097a7;
-        font-size: 1.1em;
-    }
-    .timeline-date {
-        font-size: 0.95em;
-        color: #00bcd4;
-        font-weight: 500;
-        margin-bottom: 0.5em;
-        display: block;
-    }
-    body.dark-mode .timeline-content {
-        background: #23272f;
-        color: #e0e7ef;
-    }
-    body.dark-mode .timeline {
-        border-left: 3px solid #80deea;
-    }
-    body.dark-mode .timeline-dot {
-        background: #80deea;
-        border-color: #23272f;
-    }
-</style>
