--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ Designed and developed a Client Management System (CMS) using technologies such 
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
                     <h3>10th Class</h3>
-                    <span class="timeline-date">Jan 2023 – Mar 2023</span>
+                    <span class="timeline-date">2018 –  2019</span>
                     <p>CGPA : 10.0/10.0</p>
                 </div>
             </div>
