--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Designed and developed a Client Management System (CMS) using technologies such 
                 <div class="timeline-content">
                     <h3>Integrated M.Tech in Computer Science</h3>
                     <span class="timeline-date">2021 – 2026</span>
-                    <p>Vellore Institute of Technology - AP<br>
+                    <p>Vellore Institute of Technology - AP <br> <br>
                     CGPA: 9.16/10</p>
                 </div>
             </div>
@@ -398,6 +398,7 @@ Designed and developed a Client Management System (CMS) using technologies such 
                 <div class="timeline-content">
                     <h3>12th Class</h3>
                     <span class="timeline-date">2019 – 2021</span>
+                    <p>Bhashyam Junior College<br>
                     <p>Percentage : 98.1%</p>
                 </div>
             </div>
@@ -406,6 +407,7 @@ Designed and developed a Client Management System (CMS) using technologies such 
                 <div class="timeline-content">
                     <h3>10th Class</h3>
                     <span class="timeline-date">2018 –  2019</span>
+                    <p>Bhashyam Public School<br>
                     <p>CGPA : 10.0/10.0</p>
                 </div>
             </div>
