--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <a href="#about">About</a>
                     <a href="#skills">Skills</a>
                     <a href="#projects">Projects</a>
-                    <a href="#">Education</a>
+                    <a href="#timeline">Education</a>
                     <a href="#hobbies">Hobbies</a>
                     <a href="#certifications">Certifications</a>
                     <a href="#achievements">Achievements</a>
